[tool.poetry]
name = "dhess"
version = "0.1.0"
description = ""
authors = ["handriamaromanana <hugo.andriamaromanana@volta-medical.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
